--- a/youtube-dl/youtube-dl.conf
+++ b/youtube-dl/youtube-dl.conf
@@ -1,3 +1,3 @@
 -f "bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
--o "%(release_date)s - %(title)s - %(id)s.%(ext)s"
+-o "%(upload_date)s - %(title)s - %(id)s.%(ext)s"
 --merge-output-format "mp4"
