Update youtube-dl, use alpine image

--- a/youtube-dl/Dockerfile
+++ b/youtube-dl/Dockerfile
@@ -1,12 +1,7 @@
-FROM python:3.7.2-stretch
+FROM python:3.7-alpine
 
-ENV CACHE_BUSTER=2019-06-04
-
-RUN apt-get update && \
-      apt-get install -y --no-install-recommends ffmpeg && \
-      rm -rf /var/lib/apt/lists/*
-
-RUN pip3 install youtube-dl
+RUN apk --no-cache add ffmpeg \
+  && pip3 install youtube-dl
 
 ADD youtube-dl.conf /etc/
 
