--- a/openssl/Dockerfile
+++ b/openssl/Dockerfile
@@ -1,8 +1,6 @@
-FROM debian:stretch
+FROM alpine
 
-RUN apt-get update && \
-      apt-get install -y openssl && \
-      rm -rf /var/lib/apt/lists/*
+RUN apk --no-cache add openssl
 
 WORKDIR /data
 
