--- a/youtube-dl/youtube-dl.conf
+++ b/youtube-dl/youtube-dl.conf
@@ -1,3 +1,2 @@
--f "bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
+-f "bestvideo[height>1080]+bestaudio/bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
 -o "%(upload_date)s - %(title)s - %(id)s.%(ext)s"
---merge-output-format "mp4"
