--- a/.travis.yml
+++ b/.travis.yml
@@ -27,17 +27,12 @@ before_install:
   - sudo apt update
   - sudo apt -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
-before_script:
-  - echo $(docker buildx version)
+script:
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
       export DOCKER_TAG=$DEFAULT_DOCKER_TAG;
     else
       export DOCKER_TAG=$(echo "$TRAVIS_BRANCH" | awk '{ gsub("/", "-"); print $0 }');
     fi
-  - docker build -t "$DOCKER_USERNAME/$DOCKER_IMAGE:$DOCKER_TAG" "$RELATIVE_PATH"
-
-deploy:
-  provider: script
-  script: bash -c 'echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push "$DOCKER_USERNAME/$DOCKER_IMAGE:$DOCKER_TAG"'
-  on:
-    all_branches: true
+  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+  - docker buildx create --use
+  - docker buildx build -t "$DOCKER_USERNAME/$DOCKER_IMAGE:$DOCKER_TAG" --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --push
