--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ script:
     fi
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
   - docker buildx create --use
-  - docker buildx build -t "$DOCKER_USERNAME/$DOCKER_IMAGE:$DOCKER_TAG" --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --push
+  - docker buildx build -t "$DOCKER_USERNAME/$DOCKER_IMAGE:$DOCKER_TAG" --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --push "$RELATIVE_PATH"
