Install qemu-user-static & binfmt-support

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt update
-  - sudo apt -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - sudo apt -y -o Dpkg::Options::="--force-confnew" install docker-ce qemu-user-static binfmt-support
 
 script:
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
