--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -11,6 +11,7 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         image:
           - aria2
