Fix confitional stuff

--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -35,7 +35,8 @@ jobs:
         id: setup_docker_buildx_args
         run: |
           DOCKER_IMAGE=bxggs/${{ matrix.image }}
-          DOCKER_PLATFORMS=${${{ matrix.platforms }}:-linux/amd64,linux/arm64/v8,linux/arm64,linux/arm/v6,linux/arm/v7}
+          DOCKER_PLATFORMS=${{ matrix.platforms }}
+          DOCKER_PLATFORMS=${DOCKER_PLATFORMS:-linux/amd64,linux/arm64/v8,linux/arm64,linux/arm/v6,linux/arm/v7}
           RELATIVE_PATH=${{ matrix.image }}
 
           BRANCH=${GITHUB_REF#refs/heads/}
