--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           DOCKER_IMAGE=bxggs/${{ matrix.image }}
           DOCKER_PLATFORMS=${{ matrix.platforms }}
-          DOCKER_PLATFORMS=${DOCKER_PLATFORMS:-linux/amd64,linux/arm64/v8,linux/arm64,linux/arm/v6,linux/arm/v7}
+          DOCKER_PLATFORMS=${DOCKER_PLATFORMS:-linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7}
           RELATIVE_PATH=${{ matrix.image }}
 
           BRANCH=${GITHUB_REF#refs/heads/}
