--- a/pywal/Dockerfile
+++ b/pywal/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 
 RUN apk --no-cache add imagemagick \
-  && pip3 install pywal
+  && pip3 install --no-cache-dir pywal
 
 ENV OUTPUT_FILE=colors.Xresources
 
