--- a/youtube-dl/Dockerfile
+++ b/youtube-dl/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 
 RUN apk --no-cache add ffmpeg \
-  && pip3 install youtube-dl
+  && pip3 install --no-cache-dir youtube-dl
 
 ADD youtube-dl.conf /etc/
 
