Add streamlink and streamlink-git

--- a/youtube-dl-git/Dockerfile
+++ b/youtube-dl-git/Dockerfile
@@ -2,7 +2,7 @@ FROM python:alpine
 
 RUN apk --no-cache add ffmpeg git \
   && git clone https://github.com/ytdl-org/youtube-dl /tmp/youtube-dl \
-  && pip install /tmp/youtube-dl \
+  && pip install --no-cache-dir /tmp/youtube-dl \
   && apk del git \
   && rm -rf /tmp/*
 
