--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -17,11 +17,10 @@ jobs:
           - aria2
           - nginx-autoindex
           - pywal
+          - streamlink
+          - streamlink-git
           - youtube-dl
           - youtube-dl-git
-        include:
-          - image: md-to-pdf
-            platforms: linux/amd64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
