--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -19,6 +19,7 @@ jobs:
           - pywal
           - streamlink
           - streamlink-git
+          - tcd
           - youtube-dl
           - youtube-dl-git
     steps:
