--- a/youtube-dl-git/youtube-dl.conf
+++ b/youtube-dl-git/youtube-dl.conf
@@ -1,3 +1,3 @@
 -f "bestvideo[height>1080]+bestaudio/bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
--o "%(upload_date)s-%(title)s-%(id)s.%(ext)s"
+-o "%(channel)s--%(upload_date)s--%(title)s--%(id)s--%(channel_id)s.%(ext)s"
 --restrict-filenames
