--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -44,11 +44,22 @@ jobs:
           BUILDX_ARGS="-t \"$DOCKER_IMAGE:$DOCKER_TAG\" --platform \"$DOCKER_PLATFORMS\" \"$RELATIVE_PATH\""
 
           echo "::set-output name=buildx_args::$BUILDX_ARGS"
-      - name: Setup Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-      - name: Build Docker images
-        run: docker buildx build --output "type=image,push=false" ${{ steps.setup_docker_buildx_args.outputs.buildx_args }}
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-      - name: Push Docker images
-        run: docker buildx build --output "type=image,push=true" ${{ steps.setup_docker_buildx_args.outputs.buildx_args }}
+      # - name: Setup Docker Buildx
+      #   uses: crazy-max/ghaction-docker-buildx@v3
+      # - name: Build Docker images
+      #   run: docker buildx build --output "type=image,push=false" ${{ steps.setup_docker_buildx_args.outputs.buildx_args }}
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
+      - name: Available platforms
+        run: echo ${{ steps.qemu.outputs.platforms }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # - name: Push Docker images
+      #   run: docker buildx build --output "type=image,push=true" ${{ steps.setup_docker_buildx_args.outputs.buildx_args }}
