--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -53,9 +53,14 @@ jobs:
         uses: docker/setup-qemu-action@v1
         with:
           image: tonistiigi/binfmt:latest
-          platforms: all
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
       - name: Available platforms
-        run: echo ${{ steps.qemu.outputs.platforms }}
+        run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
