--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ${{ steps.docker_args.context_path }}
-          file: ${{ steps.docker_args.dockerfile_path }}
+          context: ${{ steps.docker_args.outputs.context_path }}
+          file: ${{ steps.docker_args.outputs.dockerfile_path }}
           platforms: ${{ steps.buildx.outputs.platforms }}
           push: true
-          tags: ${{ steps.docker_args.tag }}
+          tags: ${{ steps.docker_args.outputs.tag }}
