--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -29,8 +29,7 @@ jobs:
         id: docker_args
         run: |
           DOCKER_IMAGE=bxggs/${{ matrix.image }}
-          DOCKER_CONTEXT_PATH=./${{ matrix.image }}
-          DOCKERFILE_PATH=./Dockerfile
+          DOCKER_CONTEXT_PATH=${{ matrix.image }}
 
           BRANCH=${GITHUB_REF#refs/heads/}
 
@@ -41,7 +40,6 @@ jobs:
           fi
 
           echo "::set-output name=context_path::$DOCKER_CONTEXT_PATH"
-          echo "::set-output name=dockerfile_path::$DOCKERFILE_PATH"
           echo "::set-output name=tag::$DOCKER_IMAGE:$DOCKER_TAG"
       - name: Set up QEMU
         id: qemu
@@ -63,7 +61,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ steps.docker_args.outputs.context_path }}
-          file: ${{ steps.docker_args.outputs.dockerfile_path }}
           platforms: ${{ steps.buildx.outputs.platforms }}
           push: true
           tags: ${{ steps.docker_args.outputs.tag }}
