--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -29,7 +29,7 @@ jobs:
         id: docker_args
         run: |
           DOCKER_IMAGE=bxggs/${{ matrix.image }}
-          DOCKER_CONTEXT_PATH=${{ matrix.image }}
+          DOCKER_CONTEXT_PATH=./${{ matrix.image }}
 
           BRANCH=${GITHUB_REF#refs/heads/}
 
