--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -28,19 +28,21 @@ jobs:
       - name: Set up Docker args
         id: docker_args
         run: |
-          DOCKER_IMAGE=bxggs/${{ matrix.image }}
-          DOCKER_CONTEXT_PATH=./${{ matrix.image }}
+          CONTEXT_PATH=./${{ matrix.image }}
+          FILE_PATH=$CONTEXT_PATH/Dockerfile
+          IMAGE=bxggs/${{ matrix.image }}
 
           BRANCH=${GITHUB_REF#refs/heads/}
 
           if [[ "$BRANCH" == "master" ]]; then
-            DOCKER_TAG=latest
+            TAG=latest
           else
-            DOCKER_TAG="$(echo $BRANCH | sed -e 's/\//-/g')"
+            TAG="$(echo $BRANCH | sed -e 's/\//-/g')"
           fi
 
-          echo "::set-output name=context_path::$DOCKER_CONTEXT_PATH"
-          echo "::set-output name=tag::$DOCKER_IMAGE:$DOCKER_TAG"
+          echo "::set-output name=context_path::$CONTEXT_PATH"
+          echo "::set-output name=file_path::$FILE_PATH"
+          echo "::set-output name=tag::$IMAGE:$TAG"
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -61,6 +63,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ steps.docker_args.outputs.context_path }}
+          file: ${{ steps.docker_args.outputs.file_path }}
           platforms: ${{ steps.buildx.outputs.platforms }}
-          push: true
           tags: ${{ steps.docker_args.outputs.tag }}
+          push: true
