Remove mopidy cache

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -5,7 +5,8 @@ RUN apt update \
   && curl -L https://apt.mopidy.com/mopidy.list -o /etc/apt/sources.list.d/mopidy.list \
   && apt update \
   && apt install -y mopidy mopidy-local \
-  && python3 -m pip install Mopidy-Iris
+  && python3 -m pip install Mopidy-Iris \
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ~/.cache
 
 ENV HOME /mopidy_home
 
