--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -48,7 +48,7 @@ jobs:
         id: qemu
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
