--- a/youtube-dlc-git/youtube-dlc.conf
+++ b/youtube-dlc-git/youtube-dlc.conf
@@ -1,3 +1,3 @@
 -f "bestvideo[height>1080]+bestaudio/bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
--o "%(uploader_id)s-%(upload_date)s-%(title)s-%(id)s.%(ext)s"
+-o "%(uploader_id)s-%(upload_date)s-%(title).100s-%(id)s.%(ext)s"
 --restrict-filenames
