Update ytdl git repos

--- a/youtube-dl-git/Dockerfile
+++ b/youtube-dl-git/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:alpine
 
 RUN apk --no-cache add ffmpeg git \
-  && git clone https://github.com/ytdl-org/youtube-dl /tmp/youtube-dl \
-  && pip install --no-cache-dir /tmp/youtube-dl \
+  && pip install --no-cache-dir git+https://gitlab.com/dstftw/youtube-dl \
   && apk del git \
   && rm -rf /tmp/*
 
