Restore old ytdl git url

--- a/youtube-dl-git/Dockerfile
+++ b/youtube-dl-git/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 
 RUN apk --no-cache add ffmpeg git \
-  && pip install --no-cache-dir git+https://gitlab.com/dstftw/youtube-dl \
+  && pip install --no-cache-dir git+https://github.com/ytdl-org/youtube-dl \
   && apk del git \
   && rm -rf /tmp/*
 
