Replace instances of /var/www to /data

--- a/h5ai/nginx.conf
+++ b/h5ai/nginx.conf
@@ -47,7 +47,7 @@ http {
 
     server {
       listen 80;
-      root /var/www;
+      root /data;
       index /_h5ai/public/index.php;
       charset utf-8;
 
