--- a/orl-bot/Dockerfile
+++ b/orl-bot/Dockerfile
@@ -1,12 +1,9 @@
-# build stage
-FROM golang:alpine AS build-env
-RUN apk --no-cache add build-base git bzr mercurial gcc
+FROM golang:latest AS build-env
 RUN git clone https://github.com/b-ggs/overrustlelogs.git /tmp/orl
 RUN mv /tmp/orl/bot /src
 RUN cd /src && go mod init orl-bot && go build -o orl-bot
 
-# final stage
-FROM alpine
+FROM alpine:latest
 WORKDIR /app
 COPY --from=build-env /src/orl-bot /app/
 CMD ["./orl-bot"]
