--- a/orl-server/Dockerfile
+++ b/orl-server/Dockerfile
@@ -1,12 +1,9 @@
-# build stage
 FROM golang:alpine AS build-env
-RUN apk --no-cache add build-base git bzr mercurial gcc
 RUN git clone https://github.com/b-ggs/overrustlelogs.git /tmp/orl
 RUN mv /tmp/orl/server /src
 RUN cd /src && go mod init orl-server && go build -o orl-server
 
-# final stage
-FROM alpine
+FROM alpine:latest
 WORKDIR /app
 COPY --from=build-env /src/orl-server /app/
 COPY --from=build-env /src/views/ /app/views/
