--- a/orl-logger/Dockerfile
+++ b/orl-logger/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:alpine AS build-env
+FROM golang:latest AS build-env
 RUN git clone https://github.com/b-ggs/overrustlelogs.git /tmp/orl
 RUN mv /tmp/orl/logger /src
 RUN cd /src && go mod init orl-logger && go build -o orl-logger
