--- a/orl-bot/Dockerfile
+++ b/orl-bot/Dockerfile
@@ -1,6 +1,8 @@
 FROM golang:latest AS build-env
 RUN git clone https://github.com/b-ggs/overrustlelogs.git /tmp/orl
 RUN mv /tmp/orl/bot /src
+ENV CGO_ENABLED 0
+ENV GOOS linux
 RUN cd /src && go mod init orl-bot && go build -o orl-bot
 
 FROM alpine:latest
