--- a/orl-logger/Dockerfile
+++ b/orl-logger/Dockerfile
@@ -1,6 +1,8 @@
 FROM golang:latest AS build-env
 RUN git clone https://github.com/b-ggs/overrustlelogs.git /tmp/orl
 RUN mv /tmp/orl/logger /src
+ENV CGO_ENABLED 0
+ENV GOOS linux
 RUN cd /src && go mod init orl-logger && go build -o orl-logger
 
 FROM alpine:latest
