--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -23,10 +23,14 @@ jobs:
           - nginx-autoindex
           - pywal
           - tcd-git
-          - twitch-recover
           - youtube-dl
           - youtube-dl-git
           - youtube-dlc-git
+        platforms:
+          - linux/amd64,linux/arm64
+        include:
+          - image: twitch-recover
+            platforms: linux/amd64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -52,7 +56,7 @@ jobs:
         id: qemu
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platforms }}
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
