--- a/twitch-recover/Dockerfile
+++ b/twitch-recover/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:16-jdk-alpine
+FROM openjdk:16-slim
 
 ADD https://github.com/TwitchRecover/TwitchRecover/releases/download/2.0aH/Twitch.Recover.jar /app.jar
 
