--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         image:
           - aria2
+          - autosub
           - justlog-git
           - h5ai
           # - orl-bot
