--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -24,6 +24,7 @@ jobs:
           - nginx-autoindex
           - pywal
           - tcd-git
+          - tubeup-git
           - twitch-dl
           - twitch-recover
           - youtube-dl
