Use upstream repo instead of fork for tubeup-git, add tubeup

--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -25,6 +25,7 @@ jobs:
           - nginx-autoindex
           - pywal
           - tcd-git
+          - tubeup
           - tubeup-git
           - twitch-dl
           - twitch-recover
