--- a/youtube-dl/youtube-dl.conf
+++ b/youtube-dl/youtube-dl.conf
@@ -2,3 +2,8 @@
 -o "%(uploader)s-%(upload_date)s-%(title).100s-%(id)s.%(ext)s"
 --restrict-filenames
 --add-metadata
+--write-thumbnail
+--write-sub
+--write-info-json
+--write-description
+--prefer-ffmpeg
