--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -17,7 +17,7 @@ jobs:
           - aria2
           - autosub-git
           - justlog-git
-          # - h5ai
+          - h5ai
           - jq
           # - orl-bot
           # - orl-logger
@@ -40,11 +40,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Clone additional repositories
-        # This is for images I want to run do not have arm64 builds
         run: |
-          if [[ "${{ matrix.image }}" == "h5ai" ]]; then
-            git clone https://github.com/awesometic/docker-h5ai h5ai
-          fi
+          case "${{ matrix.image }}" in
+            h5ai)
+              git clone https://github.com/awesometic/docker-h5ai h5ai
+              ;;
+            justlog-git)
+              https://github.com/gempir/justlog justlog-git
+              ;;
+          esac
       - name: Set up Docker args
         id: docker_args
         run: |
