--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -28,7 +28,7 @@ jobs:
           - tubeup
           - tubeup-git
           - twitch-dl
-          - twitch-downloader-cli
+            # - twitch-downloader-cli
           - twitch-recover
           - vlmcsd
           - vnc-xfce-firefox
@@ -36,9 +36,9 @@ jobs:
           - youtube-dl-git
         platforms:
           - linux/amd64,linux/arm64
-        include:
-          - image: twitch-downloader-cli
-            platforms: linux/amd64
+        # include:
+        #   - image: twitch-downloader-cli
+        #     platforms: linux/amd64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
