--- a/metabase/Dockerfile
+++ b/metabase/Dockerfile
@@ -1,27 +1,32 @@
-FROM adoptopenjdk/openjdk11:debianslim-jre
+FROM adoptopenjdk/openjdk11:jre-nightly as production
 
-ENV FC_LANG en-US LC_CTYPE en_US.UTF-8
+ENV FC_LANG en-US
+ENV LC_CTYPE en_US.UTF-8
 
 # dependencies
-RUN apt-get update -yq && apt-get install -yq bash ttf-dejavu fontconfig curl openjdk-11-jre-headless && \
-    apt-get clean && \
-    rm -rf /var/lib/{apt,dpkg,cache,log}/ && \
-    mkdir -p /app/certs && \
-    curl https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem -o /app/certs/rds-combined-ca-bundle.pem  && \
-    /opt/java/openjdk/bin/keytool -noprompt -import -trustcacerts -alias aws-rds -file /app/certs/rds-combined-ca-bundle.pem -keystore /etc/ssl/certs/java/cacerts -keypass changeit -storepass changeit && \
-    curl https://cacerts.digicert.com/DigiCertGlobalRootG2.crt.pem -o /app/certs/DigiCertGlobalRootG2.crt.pem  && \
-    /opt/java/openjdk/bin/keytool -noprompt -import -trustcacerts -alias azure-cert -file /app/certs/DigiCertGlobalRootG2.crt.pem -keystore /etc/ssl/certs/java/cacerts -keypass changeit -storepass changeit && \
-    mkdir -p /plugins && chmod a+rwx /plugins && \
-    useradd --shell /bin/bash metabase
+RUN apt-get update -yq && apt-get install -yq ttf-dejavu fontconfig
 
-USER metabase
-WORKDIR /app
+# add our run script to the image
+COPY ./run_metabase.sh /app/
 
-# copy app from the offical image
-COPY --from=metabase/metabase:latest /app /app
+# add Metabase jar
+COPY --from=metabase/metabase:latest /app/metabase.jar /app/metabase.jar
+
+# create the plugins directory, with writable permissions
+RUN mkdir -p /plugins
+RUN chmod a+rwx /plugins
 
 # expose our default runtime port
 EXPOSE 3000
+
+RUN groupadd --gid 2000 metabase
+RUN useradd -M --uid 2000 --gid metabase metabase
+USER metabase
+
+# if you have an H2 database that you want to initialize the new Metabase
+# instance with, mount it in the container as a volume that will match the
+# pattern /app/initial*.db:
+# $ docker run ... -v $PWD/metabase.db.mv.db:/app/initial.db.mv.db ...
 
 # run it
 ENTRYPOINT ["/app/run_metabase.sh"]
