--- a/tubeup/Dockerfile
+++ b/tubeup/Dockerfile
@@ -2,9 +2,10 @@ FROM python:alpine
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 
-RUN apk --no-cache add ffmpeg \
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
   && pip3 install --no-cache-dir tubeup \
-  && echo -e "[s3]\naccess = s3_access\nsecret = s3_secret" > /root/.ia
+  && apk --no-cache add ffmpeg \
+  && apk del .build-deps
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
