--- a/tubeup-fork-git/Dockerfile
+++ b/tubeup-fork-git/Dockerfile
@@ -5,7 +5,8 @@ COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN apk add --no-cache --virtual .build-deps gcc musl-dev git \
   && pip3 install --no-cache-dir git+https://github.com/b-ggs/yt-dlp git+https://github.com/b-ggs/tubeup \
   && apk --no-cache add ffmpeg \
-  && apk del .build-deps
+  && apk del .build-deps \
+  && echo -e "[s3]\naccess = s3_access\nsecret = s3_secret" > /root/.ia
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
