--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -14,6 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         image:
+          - ansible
           - aria2
           - autosub-git
           - h5ai
