Use sh string equality

--- a/twitch-downloader-cli/Dockerfile
+++ b/twitch-downloader-cli/Dockerfile
@@ -4,10 +4,10 @@ ENV RELEASE_NAME 1.40.7
 ENV RELEASE_BASE_URL https://github.com/lay295/TwitchDownloader/releases/download/${RELEASE_NAME}
 
 RUN apt update \
+  && echo "ARCH IS $(uname -m)" \
   && apt install -y curl ffmpeg unzip \
   && rm -rf /var/lib/apt/lists/* \
-  && echo "ARCH IS $(uname -m)" \
-  && if [[ "$(uname -m)" == "arm64" ]]; then \
+  && if [ "$(uname -m)" = "arm64" ]; then \
       export RELEASE_URL="${RELEASE_BASE_URL}/TwitchDownloaderCLI-LinuxArm-x64.zip"; \
     else \
       export RELEASE_URL="${RELEASE_BASE_URL}/TwitchDownloaderCLI-Linux-x64.zip"; \
