--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -28,24 +28,18 @@ jobs:
           - vlmcsd
         variant:
           - latest
-        platforms:
-          - linux/amd64,linux/arm64
         include:
           - image: tcd
             variant: fork
-            platforms: linux/amd64,linux/arm64
           - image: tubeup
             variant: edge
-            platforms: linux/amd64,linux/arm64
           - image: tubeup
             variant: fork
-            platforms: linux/amd64,linux/arm64
           - image: twitch-downloader-cli
             variant: latest
             platforms: linux/amd64
           - image: yt-dlp
             variant: custom-config
-            platforms: linux/amd64,linux/arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -77,7 +71,7 @@ jobs:
         id: qemu
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: ${{ matrix.platforms }}
+          platforms: ${{ matrix.platforms || 'linux/amd64,linux/arm64' }}
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
