Add autosub fork, Reformat apk add

--- a/pywal/latest/Dockerfile
+++ b/pywal/latest/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:alpine
 
-RUN apk --no-cache add imagemagick \
+RUN apk add --no-cache imagemagick \
   && pip3 install --no-cache-dir pywal
 
 ENV OUTPUT_FILE=colors.Xresources
