--- a/tcd/fork/Dockerfile
+++ b/tcd/fork/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:alpine
 
-RUN apk --no-cache add git \
+RUN apk add --no-cache git \
   && pip install --no-cache-dir git+https://github.com/b-ggs/Twitch-Chat-Downloader \
   && apk del git \
   && rm -rf /tmp/*
