--- a/yt-dlp/latest/Dockerfile
+++ b/yt-dlp/latest/Dockerfile
@@ -2,7 +2,7 @@ FROM python:alpine
 
 RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
   && pip3 install --no-cache-dir yt-dlp \
-  && apk --no-cache add ffmpeg \
+  && apk add --no-cache ffmpeg \
   && apk del .build-deps
 
 WORKDIR /data
