--- a/yt-dlp/latest/Dockerfile
+++ b/yt-dlp/latest/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:alpine
+FROM python:3.10-alpine
 
 RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
   && pip3 install --no-cache-dir yt-dlp \
