Use debian as base image instead of dotnet runtime

--- a/twitch-downloader-cli/latest/Dockerfile
+++ b/twitch-downloader-cli/latest/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/runtime:6.0
+FROM debian:bullseye
 
 ENV RELEASE_NAME 1.40.7
 ENV DOWNLOAD_URL https://github.com/lay295/TwitchDownloader/releases/download/${RELEASE_NAME}/TwitchDownloaderCLI-Linux-x64.zip
@@ -9,7 +9,8 @@ RUN apt update \
   && curl -fsSL -o /tmp/TwitchDownloaderCLI.zip "$DOWNLOAD_URL" \
   && unzip /tmp/TwitchDownloaderCLI.zip -d /bin \
   && chmod +x /bin/TwitchDownloaderCLI \
-  && rm -rf /tmp/*
+  && rm -rf /tmp/* \
+  && apt remove -y curl unzip
 
 WORKDIR /data
 
