Add curl and unzip

--- a/terraform/1.2.2/Dockerfile
+++ b/terraform/1.2.2/Dockerfile
@@ -4,7 +4,7 @@ ENV TERRAFORM_VERSION 1.2.2
 
 ENV RELEASE_BASE_URL https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}
 
-RUN apk add --no-cache git openssh \
+RUN apk add --no-cache git openssh curl unzip \
   && if [ "$(uname -m)" = "aarch64" ]; then \
       export RELEASE_URL="${RELEASE_BASE_URL}/terraform_${TERRAFORM_VERSION}_linux_arm64.zip"; \
     else \
