--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -16,19 +16,22 @@ jobs:
       matrix:
         image:
           - autosub
+          - h5ai
           - internetarchive
           - pywal
+          - streamdvr
           - tcd
           - terraform
           - tubeup
           - twitch-dl
           - twitch-recover
-          - yt-dlp
-          - h5ai
           - vlmcsd
+          - yt-dlp
         variant:
           - latest
         include:
+          - image: h5ai
+            variant: fork
           - image: tcd
             variant: fork
           - image: tubeup
@@ -40,8 +43,6 @@ jobs:
             platforms: linux/amd64
           - image: yt-dlp
             variant: custom-config
-          - image: h5ai
-            variant: fork
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -57,6 +58,9 @@ jobs:
                   git clone https://github.com/b-ggs/docker-h5ai h5ai/fork
                   ;;
               esac
+              ;;
+            streamdvr)
+              git clone https://github.com/purrsevere/docker-streamdvr streamdvr/latest
               ;;
             vlmcsd)
               git clone https://github.com/mikolatero/docker-vlmcsd vlmcsd/latest
