Remove --prefer-ffmpeg, add deno, use Python 3.14 base image

--- a/yt-dlp/custom-config/Dockerfile
+++ b/yt-dlp/custom-config/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.12-alpine
+FROM python:3.14-alpine
 
 RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
   && pip3 install --no-cache-dir yt-dlp \
-  && apk add --no-cache ffmpeg \
+  && apk add --no-cache ffmpeg deno \
   && apk del .build-deps
 
 COPY yt-dlp.conf /etc/yt-dlp.conf
