--- a/yt-dlp/latest/Dockerfile
+++ b/yt-dlp/latest/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.12-alpine
+FROM python:3.14-alpine
 
 RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
   && pip3 install --no-cache-dir yt-dlp[default,curl-cffi] \
-  && apk add --no-cache ffmpeg \
+  && apk add --no-cache ffmpeg deno \
   && apk del .build-deps
 
 WORKDIR /data
